--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -25,10 +25,10 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: frontend
-        image: 235494811179.dkr.ecr.us-east-1.amazonaws.com/three-tier-frontend:latest
+        image: 026090548352.dkr.ecr.us-east-1.amazonaws.com/three-tier-frontend:latest
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
-            value: "http://threetier.2118solutions.info/api/tasks"
+            value: "/api/tasks"
         ports:
         - containerPort: 3000
