--- a/Application-Code/frontend/Dockerfile
+++ b/Application-Code/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/library/node:14
+FROM public.ecr.aws/docker/library/node:14
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
