--- a/Application-Code/frontend/Dockerfile
+++ b/Application-Code/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/docker/library/node:14
+FROM 026090548352.dkr.ecr.us-east-1.amazonaws.com/node-base:14
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
