--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Three Tier Architecture with VPC, Subnets, NAT, IGW, Route Tables, Security Groups, IAM, EKS Cluster, and NodeGroup
+Description: Three Tier Architecture with VPC, Subnets, NAT, IGW, Route Tables, Security Groups, IAM, and EKS Cluster
 
 Parameters:
   VpcCIDR:
@@ -169,39 +169,6 @@ Resources:
         EndpointPrivateAccess: false
         EndpointPublicAccess: true
 
-  NodeInstanceRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: ec2.amazonaws.com
-            Action: sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
-        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
-        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
-      RoleName: EKS-Node-Role
-
-  NodeGroup:
-    Type: AWS::EKS::Nodegroup
-    Properties:
-      ClusterName: !Ref EKSCluster
-      NodeRole: !GetAtt NodeInstanceRole.Arn
-      Subnets:
-        - !Ref PrivateSubnet1
-        - !Ref PrivateSubnet2
-      ScalingConfig:
-        MinSize: 2
-        MaxSize: 4
-        DesiredSize: 2
-      InstanceTypes:
-        - t3.medium
-      AmiType: AL2_x86_64
-      NodegroupName: ThreeTierNodeGroup
-
 Outputs:
   VPCId:
     Value: !Ref VPC
@@ -211,5 +178,3 @@ Outputs:
     Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]
   PrivateSubnets:
     Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
-  NodeGroupName:
-    Value: !Ref NodeGroup
