--- a/cloudFormation2.yaml
+++ b/cloudFormation2.yaml
@@ -207,6 +207,63 @@ Resources:
       Username: pipeline-admin
 
 
+
+  CreateThreeTierNamespace:
+    Type: Custom::ThreeTierNamespace
+    Properties:
+      ServiceToken: !GetAtt NamespaceLambdaFunction.Arn
+      NamespaceName: three-tier
+
+  NamespaceLambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Handler: index.handler
+      Role: !GetAtt NamespaceLambdaExecutionRole.Arn
+      Runtime: python3.12
+      Timeout: 60
+      Code:
+        ZipFile: |
+          import json
+          import boto3
+          import cfnresponse
+          import subprocess
+
+          def handler(event, context):
+              try:
+                  if event['RequestType'] in ['Create', 'Update']:
+                      namespace = event['ResourceProperties']['NamespaceName']
+                      subprocess.run(['kubectl', 'create', 'namespace', namespace], check=True)
+                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
+              except Exception as e:
+                  cfnresponse.send(event, context, cfnresponse.FAILED, {'Message': str(e)})
+
+  NamespaceLambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: AllowNamespaceCreate
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - eks:DescribeCluster
+                  - eks:ListClusters
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:PutLogEvents
+                Resource: '*'
+
       
 
   EKSNodeGroupRole:
